Final compilation engine with examples