@@ -1,38 +1,46 @@
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
-import java.util.HashMap;
+import java.nio.file.*;
 import java.util.List;
+import java.util.stream.Collectors;
 
-//TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
-// click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
 public class JackAnalyzer {
     public static void main(String[] args) throws IOException {
-        Path inputFile = Paths.get(args[0]);
-        String inputFileName = inputFile.getFileName().toString();
-        JackTokenizer tokenizer = new JackTokenizer(inputFile);
+        if (args.length == 0) {
+            System.out.println("Usage: java JackAnalyzer <file_or_directory>");
+            return;
+        }
+
+        Path inputPath = Paths.get(args[0]);
+
+        if (Files.isDirectory(inputPath)) {
+            List<Path> jackFiles = Files.walk(inputPath)
+                    .filter(path -> path.toString().endsWith(".jack"))
+                    .collect(Collectors.toList());
+
+            for (Path jackFile : jackFiles) {
+                processJackFile(jackFile);
+            }
+        } else if (Files.isRegularFile(inputPath) && inputPath.toString().endsWith(".jack")) {
+            processJackFile(inputPath);
+        } else {
+            System.out.println("Invalid file or directory input.");
+        }
+    }
+
+    private static void processJackFile(Path jackFile) throws IOException {
+        JackTokenizer tokenizer = new JackTokenizer(jackFile);
         tokenizer.tokenize();
         List<Token> tokens = tokenizer.getTokens();
-        tokens.forEach((token) -> {
-            token.print(tokens.indexOf(token));
-        });
-        Path outputFile = Paths.get(inputFileName.substring(0, inputFileName.lastIndexOf('.')) + ".xml");
-        if(!Files.exists(outputFile)){
-            Files.createFile(outputFile);
-        }else{
-            Files.writeString(outputFile,"",StandardOpenOption.TRUNCATE_EXISTING);
-        }
-        CompilationEngine compilationEngine = new CompilationEngine(tokens);
-        String code = compilationEngine.compile();
-        System.out.println("Resulting xml:" + code);
-        try {
-            Files.write(outputFile, code.getBytes(), StandardOpenOption.APPEND);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-        System.out.println("=== Done with tokenization ===");
-        System.out.println("Compilation finished. Yaay!");
+
+        String outputFileName = jackFile.getFileName().toString().replace(".jack", ".xml");
+        Path outputPath = jackFile.getParent().resolve(outputFileName);
+
+        Files.writeString(outputPath, "", StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+        CompilationEngine engine = new CompilationEngine(tokens);
+        String xmlCode = engine.compile();
+
+        Files.writeString(outputPath, xmlCode, StandardOpenOption.APPEND);
+        System.out.println("✅ Created: " + outputPath);
     }
 }
